Split route get menu to load better
